--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>GIF播放页面</title>
 </head>
 <body>
-  <h2>我的GIF动画</h2>
+  <h2>郑州大暴雨</h2>
   <img src="2021.gif" width="800" alt="动画加载中">
 </body>
 </html>
+
